Small changes and refactoring
- case insensitive filter
- select numbers on input focus
- comma addition in files

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Group spend",
-  "name": "Group spend App",
+  "short_name": "GSpend",
+  "name": "Group spend",
   "icons": [
     {
       "src": "favicon.ico",
